Kinda updated gatsby node to return full path instead of slug

--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "next",
+    "gatsby-cli": "^1.1.58",
     "gatsby-image": "next",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-react-svg": "^1.1.1",
     "gatsby-plugin-sharp": "next",
+    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-transformer-remark": "^1.7.44",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
