--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby": "next",
     "gatsby-cli": "^1.1.58",
     "gatsby-image": "next",
+    "gatsby-plugin-google-analytics": "^1.0.31",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-react-svg": "^1.1.1",
     "gatsby-plugin-sharp": "next",
